--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Chris Pak - World Unboxing Champion</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -163,7 +163,7 @@
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">All the coolest shit, taken out of the box.</h2>
-                <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Watch</a>
+                <a class="btn btn-light btn-xl" href="https://www.youtube.com">Watch</a>
             </div>
         </section>
         <!-- Contact-->
