--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Apple Shit</div>
+                                <div class="project-name">Only the Finest</div>
                             </div></a
                         >
                     </div>
@@ -115,8 +115,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Waifu Life</div>
+                                <div class="project-name">XXX Hentai</div>
                             </div></a
                         >
                     </div>
@@ -124,8 +124,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Watches</div>
+                                <div class="project-name">Nothing cheaper than a Rolex</div>
                             </div></a
                         >
                     </div>
@@ -133,8 +133,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Funko Pop</div>
+                                <div class="project-name">Rarest Pops Out There</div>
                             </div></a
                         >
                     </div>
@@ -142,8 +142,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Guns</div>
+                                <div class="project-name">Bang Bang</div>
                             </div></a
                         >
                     </div>
@@ -151,8 +151,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg"
                             ><img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50">Extreme Sports</div>
+                                <div class="project-name">Soaps R00L</div>
                             </div></a
                         >
                     </div>
